# pysomeip

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yaml
docs/: conf.py  index.rst  someip.rst
someip/: _version.py  config.py  header.py  sd.py  utils.py
someip/tests/: test_header.py
src/someip/: __init__.py  _version.py  config.py  header.py  sd.py  service.py  utils.py
tests/: test_config.py  test_header.py  test_sd.py  test_service.py  test_utils.py
tools/: find-subscribe.py  get.py  monitor-sd.py  simpleservice.py  subscribe.py
