[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools', 'wheel', 'pip']  # PEP 508 specifications.
build-backend = 'setuptools.build_meta'

[tool.coverage.run]
branch = true
source = [
    'someip'
]
omit = [
    '*/_version.py',
]

[tool.coverage.paths]
source = [
    'src/',
    '*/site-packages/',
]

[tool.coverage.report]
exclude_lines = [
    '^\s*\.\.\.\s*(#|$)',
    '#\s*(pragma|PRAGMA)[:\s]?\s*(no|NO)\s*(cover|COVER)'
]

[tool.black]
target_version = [
    'py38',
    'py37',
]
