[metadata]
name = someip
author = Kjell Braden
author_email = afflux@pentabarf.de
license =
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Intended Audience :: Developers

[options]
zip_safe = true
install_requires =
    netifaces >= 0.10.4
package_dir =
    = src
packages = find:

[options.entry_points]
console_scripts =
    someip-monitor-offers = someip.sd:main


[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/someip/_version.py
versionfile_build = someip/_version.py
tag_prefix =
parentdir_prefix = 

[flake8]
max-line-length = 99
exclude = _version.py
ignore = F821,E704,W503,E203

[mypy]
warn_unreachable = True
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False

[mypy-someip._version]
ignore_errors = True
