[metadata]
name = someip
author = Kjell Braden
author_email = afflux@pentabarf.de
license = MIT
url = https://github.com/afflux/someip
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Intended Audience :: Developers

[options]
zip_safe = true
install_requires =
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = F821,E704,W503,E203
ignore-names=setUp,tearDown,setUpClass,tearDownClass,setUpTestData,failureException,longMessage,maxDiff,setUpModule,tearDownModule

[mypy]
warn_unreachable = True
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
