[metadata]
name = someip
author = Kjell Braden
author_email = afflux@pentabarf.de
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/afflux/pysomeip
project_urls =
    Documentation = https://pysomeip.readthedocs.io/en/latest/
    Source = https://github.com/afflux/pysomeip
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
install_requires =
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
docs = sphinx>=3.0.1

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = F821,E704,W503,E203
ignore-names=setUp,tearDown,setUpClass,tearDownClass,setUpTestData,failureException,longMessage,maxDiff,setUpModule,tearDownModule

[mypy]
warn_unreachable = True
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
